--- a/students/templates/edit.html
+++ b/students/templates/edit.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "index.html" %}
 
-</body>
-</html>
+{% block content %}
+    <form method="post">
+        {{ edit_form.as_p }}
+        <input class="btn btn-success" type="submit" value="Save"/>
+    </form>
+{% endblock %}
