--- a/students/templates/index.html
+++ b/students/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>Fixed top navbar example · Bootstrap v5.1</title>
+    <title>LMS | Start</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -52,7 +52,7 @@
                     <a class="nav-link active" href="{% url 'students:create' %}">Create student</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled">Other</a>
                 </li>
             </ul>
             <form class="d-flex">
@@ -65,11 +65,12 @@
 
 <main class="container">
     <div class="bg-light p-5 rounded">
+        <br>
         {% block content %}
-        <h1>Navbar example</h1>
-        <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it
-            will remain fixed to the top of your browser’s viewport.</p>
-        <a class="btn btn-lg btn-primary" href="../components/navbar/" role="button">View navbar docs &raquo;</a>
+        <h1>Welcome to LMS starting page!</h1>
+        <p class="lead">This website provides a chance to take a look at LMS fictional students (teachers and groups soon as well).<br>
+            You can also <em>create</em> a new record, <em>edit</em> or <em>delete</em> an existing one - as you like!</p>
+        <a class="btn btn-lg btn-primary" href="{% url 'students:list' %}" role="button">Start!</a>
         {% endblock %}
     </div>
 </main>
