--- a/students/templates/show_students.html
+++ b/students/templates/show_students.html
@@ -12,6 +12,7 @@
       <th scope="col">Phone number</th>
       <th scope="col">Birthdate</th>
       <th scope="col">Enroll date</th>
+      <th scope="col">Edit</th>
       <th scope="col">Delete</th>
     </tr>
   </thead>
@@ -26,6 +27,10 @@
           <td>{{ student.phone_number }}</td>
           <td>{{ student.birthdate }}</td>
           <td>{{ student.enroll_date }}</td>
+          <td>
+            <a type="button" class="btn btn-info" href="{% url 'students:edit' pk=student.id %}">Edit
+            </a>
+          </td>
           <td>
             <a type="button" class="btn btn-danger" href="{% url 'students:delete' pk=student.id %}">Delete
             </a>
