--- a/students/templates/index.html
+++ b/students/templates/index.html
@@ -55,9 +55,10 @@
                     <a class="nav-link disabled">Other</a>
                 </li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+            <!--      creating a search field to filter students on the page      -->
+            <form class="d-flex" type="get" action="." style="margin: 0">
+                <input class="d-flex" id="search_box" type="text" name="search_box"  placeholder="Search" >
+                <button class="btn btn-outline-success" id="search_submit" type="submit" >Search</button>
             </form>
         </div>
     </div>
