--- a/students/templates/create-student.html
+++ b/students/templates/create-student.html
@@ -1,8 +1,11 @@
 {% extends "index.html" %}
+{% load crispy_forms_tags %}
+
 
 {% block content %}
     <form method="post">
-        {{ create_form.as_p }}
+        {{ create_form|crispy }}
+        <br>
         <input class="btn btn-success" type="submit" value="Create"/>
     </form>
 {% endblock %}
