--- a/students/templates/index.html
+++ b/students/templates/index.html
@@ -48,9 +48,19 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'students:list' %}">Students table</a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link active" href="{% url 'students:create' %}">Create student</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'students:teachers' %}">Teachers table</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'students:create-teacher' %}">Create teacher</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link disabled">Other</a>
                 </li>
