--- a/students/templates/show_students.html
+++ b/students/templates/show_students.html
@@ -5,13 +5,11 @@
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">ID</th>
       <th scope="col">First name</th>
       <th scope="col">Last name</th>
       <th scope="col">Email</th>
       <th scope="col">Phone number</th>
-      <th scope="col">Birthdate</th>
-      <th scope="col">Enroll date</th>
+      <th scope="col">Course</th>
       <th scope="col">Edit</th>
       <th scope="col">Delete</th>
     </tr>
@@ -20,13 +18,11 @@
   <tbody>
     {% for student in students_list %}
         <tr>
-          <th scope="row">{{ student.id }}</th>
           <td>{{ student.first_name }}</td>
           <td>{{ student.last_name }}</td>
           <td>{{ student.email }}</td>
           <td>{{ student.phone_number }}</td>
-          <td>{{ student.birthdate }}</td>
-          <td>{{ student.enroll_date }}</td>
+          <td>{{ student.course }}</td>
           <td>
             <a type="button" class="btn btn-info" href="{% url 'students:edit' pk=student.id %}">Edit
             </a>
