--- a/students/templates/show_students.html
+++ b/students/templates/show_students.html
@@ -5,6 +5,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th scope="col">Avatar</th>
       <th scope="col">First name</th>
       <th scope="col">Last name</th>
       <th scope="col">Email</th>
@@ -18,6 +19,9 @@
   <tbody>
     {% for student in students_list %}
         <tr>
+          <td>
+            <img src="http://127.0.0.1:8000/{{ student.avatar }}" width="70" height="80" >
+          </td>
           <td>{{ student.first_name }}</td>
           <td>{{ student.last_name }}</td>
           <td>{{ student.email }}</td>
