--- a/students/templates/edit.html
+++ b/students/templates/edit.html
@@ -1,8 +1,10 @@
 {% extends "index.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
     <form method="post">
-        {{ edit_form.as_p }}
+        {{ edit_form|crispy }}
+        <br>
         <input class="btn btn-success" type="submit" value="Save"/>
     </form>
 {% endblock %}
