--- a/students/templates/show_students.html
+++ b/students/templates/show_students.html
@@ -11,6 +11,7 @@
       <th scope="col">Email</th>
       <th scope="col">Phone number</th>
       <th scope="col">Course</th>
+      <th scope="col">Resume</th>
       <th scope="col">Edit</th>
       <th scope="col">Delete</th>
     </tr>
@@ -20,13 +21,20 @@
     {% for student in students_list %}
         <tr>
           <td>
-            <img src="http://127.0.0.1:8000/{{ student.avatar }}" width="70" height="80" >
+            {% if student.avatar %}
+              <img src="{{ student.avatar.url }}" width="70" height="80" >
+            {% endif %}
           </td>
           <td>{{ student.first_name }}</td>
           <td>{{ student.last_name }}</td>
           <td>{{ student.email }}</td>
           <td>{{ student.phone_number }}</td>
           <td>{{ student.course }}</td>
+          <td>
+            {% if student.resume %}
+            <a href="{{ student.resume.url }}" download="{{ student.first_name }}_{{ student.last_name }}_resume">Download</a>
+            {% endif %}
+          </td>
           <td>
             <a type="button" class="btn btn-info" href="{% url 'students:edit' pk=student.id %}">Edit
             </a>
