--- a/students/templates/show_students.html
+++ b/students/templates/show_students.html
@@ -9,7 +9,7 @@
       <th scope="col">First name</th>
       <th scope="col">Last name</th>
       <th scope="col">Email</th>
-      <th scope="col">Phone number</th>
+<!--      <th scope="col">Phone number</th>-->
       <th scope="col">Course</th>
       <th scope="col">Resume</th>
       <th scope="col">Edit</th>
@@ -28,7 +28,7 @@
           <td>{{ student.first_name }}</td>
           <td>{{ student.last_name }}</td>
           <td>{{ student.email }}</td>
-          <td>{{ student.phone_number }}</td>
+<!--          <td>{{ student.phone_number }}</td>-->
           <td>{{ student.course }}</td>
           <td>
             {% if student.resume %}
