--- a/students/templates/show_students.html
+++ b/students/templates/show_students.html
@@ -1,7 +1,20 @@
 {% extends "index.html" %}
 
 {% block content %}
-<!--    <h1>Students list</h1>-->
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+          aria-expanded="false">Choose a course</button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    {% for course in courses_list %}
+    <li>
+      <a class="dropdown-item" href="http://127.0.0.1:8000/students/?course={{ course.name }}">{{ course.name }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+
+<br>
+
 <table class="table">
   <thead>
     <tr>
