--- a/students/templates/create-student.html
+++ b/students/templates/create-student.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {{ create_form|crispy }}
         <br>
         <input class="btn btn-success" type="submit" value="Create"/>
