--- a/students/templates/edit.html
+++ b/students/templates/edit.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {{ edit_form|crispy }}
         <br>
         <input class="btn btn-success" type="submit" value="Save"/>
