--- a/students/templates/show_students.html
+++ b/students/templates/show_students.html
@@ -7,7 +7,7 @@
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
     {% for course in courses_list %}
     <li>
-      <a class="dropdown-item" href="http://127.0.0.1:8000/students/?course={{ course.name }}">{{ course.name }}</a>
+      <a class="dropdown-item" href="http://127.0.0.1:8000/students/?course={{ course.id }}">{{ course.name }}</a>
     </li>
     {% endfor %}
   </ul>
