--- a/students/templates/show_teachers.html
+++ b/students/templates/show_teachers.html
@@ -17,7 +17,7 @@
     {% for course in courses_list %}
     <li>
       <a class="dropdown-item"
-         href="http://127.0.0.1:8000/students/teachers/?course={{ course.name }}">{{ course.name }}</a>
+         href="http://127.0.0.1:8000/students/teachers/?course={{ course.id }}">{{ course.name }}</a>
     </li>
     {% endfor %}
   </ul>
