--- a/students/templates/index.html
+++ b/students/templates/index.html
@@ -68,7 +68,7 @@
             <!--      creating a search field to filter students on the page      -->
             {% block search %}
             <form class="d-flex" type="get" action="." style="margin: 0">
-                <input class="d-flex" id="search_box" type="text" name="search_box"  placeholder="Search.." >
+                <input class="d-flex" id="search" type="text" name="search"  placeholder="Search.." >
                 <button class="btn btn-outline-success" id="search_submit" type="submit">Search</button>
             </form>
             {% endblock %}
