--- a/students/templates/create-student.html
+++ b/students/templates/create-student.html
@@ -4,7 +4,8 @@
 
 {% block content %}
     <form method="post" enctype="multipart/form-data">
-        {{ create_form|crispy }}
+        {% csrf_token %}
+        {{ form|crispy }}
         <br>
         <input class="btn btn-success" type="submit" value="Create"/>
     </form>
