--- a/students/templates/edit.html
+++ b/students/templates/edit.html
@@ -3,7 +3,8 @@
 
 {% block content %}
     <form method="post" enctype="multipart/form-data">
-        {{ edit_form|crispy }}
+        {% csrf_token %}
+        {{ form|crispy }}
         <br>
         <input class="btn btn-success" type="submit" value="Save"/>
     </form>
