--- a/students/templates/index.html
+++ b/students/templates/index.html
@@ -47,7 +47,8 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'sign_in' %}">Logout</a>
+                        <a class="nav-link active" aria-current="page"
+                           href="{% url 'sign_in' %}">{{ user.email }}</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
