--- a/students/templates/registration/sign_in.html
+++ b/students/templates/registration/sign_in.html
@@ -16,11 +16,17 @@
                 <p class="lead"><em>Already have an account?</em></p>
                 <a class="btn btn-lg btn-primary" href="{% url 'login' %}" role="button">Login</a>
             </li>
-            <br><br>
+            <br>
 
             <li>
                 <p class="lead"><em>Want to create a new user?</em></p>
                 <a class="btn btn-lg btn-primary" href="{% url 'registration' %}" role="button">Sign up</a>
+            </li>
+            <br>
+
+            <li>
+                <p class="lead"><em>Have a GitHub account?</em></p>
+                <a class="btn btn-lg btn-primary" href="{% url 'social:begin' 'github' %}" role="button">GitHub</a>
             </li>
         </ul>
 
