hw22, admin interface

--- a/students/templates/index.html
+++ b/students/templates/index.html
@@ -61,7 +61,15 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'students:create' %}">Create student</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'teachers:list' %}">Teachers table</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'teachers:create' %}">Create teacher</a>
                 </li>
 
                 <li class="nav-item">
