created a 'users' app (separated from 'students')

--- a/users/templates/emails/registration_email.html
+++ b/users/templates/emails/registration_email.html
@@ -161,7 +161,7 @@
                                         <tr>
                                             <td align="center"
                                                 style="border-radius: 3px;"
-                                                bgcolor="#FFA73B"><a href="http://{{ domain }}{% url 'activate' uidb64=uid token=token %}"
+                                                bgcolor="#FFA73B"><a href="http://{{ domain }}{% url 'users:activate' uidb64=uid token=token %}"
                                                                      target="_blank"
                                                                      style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #FFA73B; display: inline-block;">Confirm
                                                 Account</a></td>
