--- a/users/templates/500.html
+++ b/users/templates/500.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>Page not found | 404 error</title>
+    <title>Server error | 500 error</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -40,8 +40,8 @@
 <main class="container">
     <div class="bg-light p-5 rounded">
         <br>
-	<h2>Page not found</h2>
-        <p>The page you were looking for might have been removed, had its name changed or is temporarily unavailable.</p>
+	<h2>Server Error</h2>
+        <p>A server error occurred.  Please contact the administrator.</p>
         <a class="btn btn-lg btn-primary" href="{% url 'start' %}" role="button">Back to Homepage!</a>
     </div>
 </main>
