--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -6,7 +6,11 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
+
     <title>LMS | Start</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <a target="_blank" href="https://icons8.com/icon/9aJVHof76pMn/nation">Nation</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
